# autonomous-driving

./: .gitignore  LICENSE  README.md
detection/: README.dataset.txt  README.roboflow.txt  custom_yolov5s.yaml  data.yaml
detection/exp7/: events.out.tfevents.1646799704.brent-MS-7C91.124208.0  opt.yaml  results.csv
detection/train/: labels.cache
detection/valid/: labels.cache
doc/: perception.md
machine-learning/yolo/: collect-data.py  train.txt  valid.txt
machine-learning/yolo/data/: convert-data.py  signs-1.xml  (+24 more)
ros/: README.md  slam.sh
ros/devel/: .catkin  .rosinstall  setup.sh
ros/src/: launch-files.txt
src/qcar/: model.config  package.xml  setup.py
src/qcar_control/: CMakeLists.txt
src/qcar_gazebo/: CMakeLists.txt  README.md
src/qcar_interface/: CMakeLists.txt  cameras.yaml  cameras_simulation.yaml  package.xml
src/qcar_mapping/: package.xml
src/qcar_perception/: CMakeLists.txt  package.xml
src/qcar_perception/launch/: lane_detection.launch  object_detection.launch  perception.launch
src/qcar_perception/msg/: BoundingBox2D.msg  ObjectDetections2D.msg
src/qcar_perception/rviz/: perception.rviz
src/qcar_perception/script/: lane-detector.py  node.py
src/qcar_perception/script/detectors/: base_detector.py  lanenet_detector.py  scnn_detector.py
src/qcar_perception/script/detectors/pretrained-models/scnn-model/variables/: variables.index
src/qcar_perception/src/: lane_detection.py  object_detection.py
src/qcar_perception/src/lanedetection/: LaneDetection.py  __init__.py
src/qcar_planning/: CMakeLists.txt  package.xml
(+124 files in other folders)
