<?xml version="1.0"?>
<package format="2">
  <name>qcar_perception</name>
  <version>0.0.0</version>
  <description>The qcar_perception package</description>
  <maintainer email="brent@todo.todo">brent</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_export_depend>rospy</build_export_depend>
  <export>
  </export>
</package>
